--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -1,9 +1,8 @@
 {% if page.lang %}
-  {% assign lang = site.t[page.lang] %}
+  {% assign locale = site.t.locale[page.lang] %}
 {% else %}
-  {% assign lang = 0 %}
+  {% assign locale = site.locale %}
 {% endif %}
-{% assign locale = site.t.locale[lang] %}
 
 <section class="page__share">
   {% if site.data.ui-text[locale].share_on_label %}
