--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,8 +1,5 @@
-{% if page.lang %}
-  {% assign locale = site.t.locale[page.lang] %}
-{% else %}
-  {% assign locale = site.locale %}
-{% endif %}
+{% assign lang = page.lang | default: 0 %}
+{% assign locale = site.t.locale[lang] %}
 
 <div class="page__comments">
   {% capture comments_label %}{{ site.data.ui-text[locale].comments_label | default: "Comments" }}{% endcapture %}
