modify author-profile for multi-language

--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -1,7 +1,10 @@
+{% assign lang = page.lang | default: 0 %}
+{% assign locale = site.t.locale[lang] %}
+
 {% if page.author and site.data.authors[page.author] %}
   {% assign author = site.data.authors[page.author] %}
 {% else %}
-  {% assign author = site.author %}
+  {% assign author = site.t.author[lang] %}
 {% endif %}
 
 <div itemscope itemtype="http://schema.org/Person">
@@ -26,7 +29,7 @@
   </div>
 
   <div class="author__urls-wrapper">
-    <button class="btn btn--inverse">{{ site.data.ui-text[site.locale].follow_label | remove: ":" | default: "Follow" }}</button>
+    <button class="btn btn--inverse">{{ site.data.ui-text[locale].follow_label | remove: ":" | default: "Follow" }}</button>
     <ul class="author__urls social-icons">
       {% if author.location %}
         <li itemprop="homeLocation" itemscope itemtype="http://schema.org/Place">
@@ -37,7 +40,7 @@
       {% if author.uri %}
         <li>
           <a href="{{ author.uri }}" itemprop="url">
-            <i class="fa fa-fw fa-chain" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].website_label | default: "Website" }}
+            <i class="fa fa-fw fa-chain" aria-hidden="true"></i> {{ site.data.ui-text[locale].website_label | default: "Website" }}
           </a>
         </li>
       {% endif %}
@@ -46,7 +49,7 @@
         <li>
           <a href="mailto:{{ author.email }}">
             <meta itemprop="email" content="{{ author.email }}" />
-            <i class="fa fa-fw fa-envelope-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].email_label | default: "Email" }}
+            <i class="fa fa-fw fa-envelope-square" aria-hidden="true"></i> {{ site.data.ui-text[locale].email_label | default: "Email" }}
           </a>
         </li>
       {% endif %}
