--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,10 +1,12 @@
+{% assign lang = page.lang | default: 0 %}
+
 <div class="masthead">
   <div class="masthead__inner-wrap">
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
         <a class="site-title" href="{{ '/' | absolute_url }}">{{ site.title }}</a>
         <ul class="visible-links">
-          {% for link in site.data.navigation.main %}
+          {% for link in site.data.navigation.t[lang].main %}
             {% if link.url contains 'http' %}
               {% assign domain = '' %}
             {% else %}
