--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -1,10 +1,10 @@
 {% assign lang = page.lang | default: 0 %}
-{% assign locale = site.t.locale[lang] %}
+{% assign locale = site.t[lang].locale %}
 
 {% if page.author and site.data.authors[page.author] %}
   {% assign author = site.data.authors[page.author] %}
 {% else %}
-  {% assign author = site.t.author[lang] %}
+  {% assign author = site.t[lang].author %}
 {% endif %}
 
 <div itemscope itemtype="http://schema.org/Person">
