--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -4,7 +4,7 @@
   <div class="masthead__inner-wrap">
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
-        <a class="site-title" href="{{ '/' | absolute_url }}">{{ site.title }}</a>
+        <a class="site-title" href="{{ '/' | absolute_url }}">{{ site.t[lang].title }}</a>
         <ul class="visible-links">
           {% for link in site.data.navigation.t[lang].main %}
             {% if link.url contains 'http' %}
