--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,15 +2,16 @@
 {% assign locale = site.t[lang].locale %}
 
 {% assign pages = site.pages | where:"ref", page.ref | sort: 'lang' %}
-
-<div class="page__footer-follow">
+<div class="page__footer-language">
   <ul>
     <li><strong>{{ site.data.ui-text[locale].language | default: "language" }}:</strong></li>
     {% for page in pages %}
       <li><a href="{{ page.url }}" class="{{ site.t[page.lang].locale }}">{{ site.t[page.lang].locale }}</a></li>
     {% endfor %}
   </ul>
+</div>
 
+<div class="page__footer-follow">
   <ul class="social-icons">
     {% if site.data.ui-text[locale].follow_label %}
       <li><strong>{{ site.data.ui-text[locale].follow_label }}</strong></li>
