--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,8 +14,8 @@
       {% else %}
         {% assign domain = site.url | append: site.baseurl %}
       {% endif %}
-      {% assign this_locale = page.t[lang].locale %}
-      <li><a href="{{ domain }}{{ page.url }}" class="{{ this_locale }}">{{ site.data.ui-text[this_locale].language_name }}</a></li>
+      {% assign that_locale = site.t[page.lang].locale %}
+      <li><a href="{{ domain }}{{ page.url }}" class="{{ that_locale }}">{{ site.data.ui-text[that_locale].language_name }}</a></li>
     {% endfor %}
   </ul>
 </div>
