--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -4,7 +4,13 @@
   <div class="masthead__inner-wrap">
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
-        <a class="site-title" href="{{ '/' | absolute_url }}">{{ site.t[lang].title }}</a>
+        {% assign homes = site.pages | where:"ref", "home" | where: "lang", page.lang %}
+        {% if homes.first.url contains 'http' %}
+          {% assign home_domain = '' %}
+        {% else %}
+          {% assign home_domain = site.url | append: site.baseurl %}
+        {% endif %}
+        <a class="site-title" href="{{ home_domain }}{{ homes.first.url }}">{{ site.t[lang].title }}</a>
         <ul class="visible-links">
           {% for link in site.data.navigation.t[lang].main %}
             {% if link.url contains 'http' %}
